--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/reyvery_ecommerce
 spring.datasource.username=root
 spring.datasource.password=123456
 
+spring.profiles.active=dev
+spring.main.allow-circular-references=true
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
